--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,47 @@
 version: '3.6'
 
 services:
+  api:
+    build:
+      context: .
+      dockerfile: APIDockerfile
+    depends_on:
+      - rabbitmq
+    restart: on-failure
+    volumes:
+      - .:/go/src/message
+    ports:
+      - "8080:8080"
+    networks:
+      - MessageNetwork
+
+  consumer:
+    build:
+      context: .
+      dockerfile: CONSUMERDockerfile
+    depends_on:
+      - rabbitmq
+    restart: on-failure
+    volumes:
+      - .:/go/src/message
+    ports:
+      - "8081:8081"
+    networks:
+      - MessageNetwork
+
+  reporting:
+    build:
+      context: .
+      dockerfile: REPORTINGDockerfile
+    depends_on:
+      - redis
+    restart: on-failure
+    volumes:
+      - .:/go/src/message
+    ports:
+      - "8082:8080"
+    networks:
+      - MessageNetwork
 
   rabbitmq:
     image: rabbitmq:3.7-management
@@ -12,9 +53,17 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=user
       - RABBITMQ_DEFAULT_PASS=password
+    networks:
+        - MessageNetwork
 
   redis:
     image: redis:5-alpine
     ports:
-      - 6379:6379
+      - "6379:6379"
     restart: always
+    networks:
+      - MessageNetwork
+
+networks:
+  MessageNetwork:
+    driver: bridge
